[package]
name = "yew-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
gloo-console = "0.2.1"
reqwasm = "0.5.0"
serde = { version = "1.0.142", features = ["derive"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
yew = "0.19.3"
