[package]
name = "hello-world"
version = "0.1.0"
authors = ["Jesper Hasselquist <jesper.hasselquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"
web-sys = {version = "0.3.45", features = ["console"]}

[lib]
crate-type = ["cdylib"]
